管理者ユーザーの追加、お問い合わせ一覧画面の作成

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -84,5 +84,6 @@
     "You are receiving this email because we received a password reset request for your account.": "パスワード再設定のリクエストを受け付けました。",
     "You're logged in!": "ログイン成功",
     "Your email address is unverified.": "メールアドレスが未認証です。",
-    "Contact": "お問い合わせ"
+    "Contact": "お問い合わせ",
+    "ContactIndex": "お問い合わせ一覧"
 }
